# posey-hub-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  read_serial_throughput.py  readme.md
child_image/: hci_ipc.conf
src/: TaskHub.cpp  TaskHub.hpp  TaskHubTelemetry.hpp  cdc_acm.c  main.c  main.cpp  platform.hpp
src/posey-platform/: ZephyrPlatform.cpp  ZephyrPlatform.hpp
src/posey-platform/platform/: ZephyrClock.hpp
src/posey-platform/platform/io/: CDCACMDriver.c  CDCACMDriver.h  NordicNUSDriver.c  NordicNUSDriver.h  NordicNUSDriver_process_data.cpp  NordicNUSReader.hpp  NordicNUSWriter.hpp
